Minor edits latex formatting and layout

--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -1,3 +1,5 @@
+\clearpage
+
 \section{Data processing details and antecedent mining}
 \label{appendix:data}
 
@@ -78,7 +80,7 @@ as well as negations of the 18 antecedents corresponding to the two features
 \emph{stop reason} and \emph{additional circumstances},
 which gives a total of 46 antecedents.
 
-\begin{table}[h!]
+\begin{table}[t!]
 \centering
 %$Q_\text{max}$ $K_\text{max}$
 \begin{tabular}{l | c  c}
