--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -36,7 +36,7 @@ Recidivism is defined as committing a crime within 2 years of the COMPAS
 assessment.
 This dataset contains records for 7,214 individuals.
 %
-Our rule mining framework extracts 14 features and combines them into
+Our antecedent mining framework extracts 14 features and combines them into
 ${M=156}$ antecedents on average (folds ranged from containing 155 to 157 antecedents).
 %
 \item Using the NYCLU 2014 stop-and-frisk dataset~\citep{nyclu:2014} to predict
@@ -272,7 +272,7 @@ Across the 10 cross-validation folds, the optimal rule lists learned by CORELS
 (${\Reg = 0.005}$), shown in Figure~\ref{fig:recidivism-all-folds},
 have mean test accuracy~0.676, with standard deviation of~0.020.
 %
-The COMPAS algorithm outputs integer scores between 1 and 10,
+The COMPAS algorithm outputs integer scores between~1 and~10,
 representing low (1-4), medium (5-7), and high (8-10) risk for recidivism.
 %
 As in the analysis by~\citep{LarsonMaKiAn16}, we interpret a medium or high score
@@ -281,11 +281,11 @@ as a positive prediction for two-year recidivism, and a low score as a negative 
 Across the 10 folds, the COMPAS algorithm scores have a slightly lower
 mean test accuracy of~0.654, with standard deviation 0.015.
 
-We also considered a variant of our procedure with CORELS for a different
+We also considered a variant of our CORELS procedure for a different
 feature set:  we used the coarser age categories from the ProPublica dataset
-(<25, 25-45, >45) and included race (African American, Asian, Caucasian, Hispanic,
-Other\footnote{We grouped together the original Native American (<0.003) and Other (>0.05) categories.});
-our rule mining procedure generated 197 antecedents, on average, across folds.
+($<$25, 25-45, $>$45) and included race (African American, Asian, Caucasian, Hispanic,
+Other\footnote{We grouped together the original Native American ($<$0.003) and Other ($>$0.05) categories.});
+our antecedent mining procedure generated 197 antecedents, on average.
 %
 In this context, CORELS achieves the similar mean test accuracy of~0.659, with standard deviation~0.015.
 %
@@ -293,8 +293,8 @@ We note two distinguishing features of the optimal rule lists found by CORELS.
 %
 First, none of these rule lists contain antecedents that directly depend on race.
 %
-Second, the rule lists are even simpler than those in Figure~\ref{fig:recidivism-all-folds}:
-the prefixes all have length two or three instead of four.
+Second, the rule lists are even simpler than those in Figure~\ref{fig:recidivism-all-folds};
+these prefixes all have length two or three instead of four.
 
 \subsection{CORELS execution traces, for different regularization parameters}
 \label{sec:reg-param}
