--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -270,7 +270,7 @@ at predicting two-year recidivism for the ProPublica dataset.
 %
 Across the 10 cross-validation folds, the optimal rule lists learned by CORELS
 (${\Reg = 0.005}$), shown in Figure~\ref{fig:recidivism-all-folds},
-have mean test accuracy~0.676, with standard deviation of~0.020.
+have mean test accuracy~0.676, with standard deviation~0.020.
 %
 The COMPAS algorithm outputs integer scores between~1 and~10,
 representing low (1-4), medium (5-7), and high (8-10) risk for recidivism.
@@ -279,7 +279,7 @@ As in the analysis by~\citep{LarsonMaKiAn16}, we interpret a medium or high scor
 as a positive prediction for two-year recidivism, and a low score as a negative prediction.
 %
 Across the 10 folds, the COMPAS algorithm scores have a slightly lower
-mean test accuracy of~0.654, with standard deviation 0.015.
+mean test accuracy of~0.654, with standard deviation~0.015.
 
 We also considered a variant of our CORELS procedure for a different
 feature set:  we used the coarser age categories from the ProPublica dataset
