Tweaks to first couple sentences of intro

--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -3,11 +3,12 @@
 As machine learning continues to gain prominence in socially-important decision-making,
 the interpretability of predictive models remains a crucial problem.
 %
-Our goal is to build models that are both highly predictive and easily understood by humans.
+Our goal is to build models that are highly predictive, transparent, and easily understood by humans.
 %
 We use rule lists, also known as decision lists, to achieve this goal.
 %
-Rule lists are lists composed of if-then statements, which are easily interpreted; the rules give a reason for each prediction~(Figure~\ref{fig:rule-list}).
+Rule lists are predictive models composed of if-then statements;
+these models are interpretable because the rules provide a reason for each prediction~(Figure~\ref{fig:rule-list}).
 
 Constructing rule lists, or more generally, decision trees, has been a challenge for more than
 30 years; most approaches use greedy splitting techniques~\citep{Rivest87,Breiman84,Quinlan93}. 
