--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -1,5 +1,3 @@
-\clearpage
-
 \section{Data processing details and antecedent mining}
 \label{appendix:data}
 
@@ -262,7 +260,7 @@ of optimal rule lists, though they share similar structure.
 %{cs_objcs:stop-reason=suspicious-object}~1;{location:transit-authority}~1;{cs_bulge:stop-reason=suspicious-bulge}~1;default~0
 %{cs_objcs:stop-reason=suspicious-object}~1;{cs_bulge:stop-reason=suspicious-bulge}~1;{location:transit-authority}~1;default~0
 %{location:transit-authority}~1;{cs_objcs:stop-reason=suspicious-object}~1;{cs_bulge:stop-reason=suspicious-bulge}~1;default~0
-\begin{figure}[h!]
+\begin{figure}[b!]
 \textbf{Weapon prediction $(\Reg = 0.04)$}
 \vspace{1mm}
 \begin{algorithmic}
