--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -13,7 +13,7 @@ for different values of the regularization parameter~$\Reg$? (\S\ref{sec:reg-par
 \end{itemize}
 Below, we first describe our computational environment, as well as
 datasets we use and prediction problems for each, and then in the next section,
-we show example optimal rule lists found by CORELS (\S\ref{sec:examples}). \\
+we show example optimal rule lists found by CORELS (\S\ref{sec:examples}).
 
 \textbf{Computational environment.}
 %\label{sec:environment}
@@ -21,14 +21,15 @@ All timed results ran on a server with two Intel Xeon E5-2699~v4
 (55~MB cache, 2.20~GHz) processors and 756~GB RAM.
 %
 Except where we mention a memory constraint, all experiments
-can run comfortably on smaller machines, \eg a laptop with 16GB~RAM. \\
+can run comfortably on smaller machines, \eg a laptop with 16GB~RAM.
 
-\textbf{Datasets and prediction problems.}
+%\textbf{Datasets and prediction problems.}
 %\label{sec:datasets}
 Our evaluation focuses on two socially-important prediction problems associated
-with recent, publicly-available datasets:
-\begin{itemize}
-\item Predicting which individuals in the ProPublica COMPAS
+with recent, publicly-available datasets.
+
+\textbf{ProPublica recidivism dataset.}
+For our first problem, we predict which individuals in the ProPublica COMPAS
 dataset~\citep{LarsonMaKiAn16} recidivate within two years.
 This dataset contains records for all offenders in Broward County, Florida
 in 2013 and 2014 who were given a COMPAS score pre-trial.
@@ -36,10 +37,14 @@ Recidivism is defined as committing a crime within 2 years of the COMPAS
 assessment.
 This dataset contains records for 7,214 individuals.
 %
-Our antecedent mining framework extracts 14 features and combines them into
-${M=156}$ antecedents on average (folds ranged from containing 155 to 157 antecedents).
+For the majority of our analysis, we extract a set of 14 features,
+which our antecedent mining framework combines into ${M=156}$ antecedents,
+on average (folds ranged from containing 155 to 157 antecedents).
 %
-\item Using the NYCLU 2014 stop-and-frisk dataset~\citep{nyclu:2014} to predict
+We also consider a second, similar antecedent set in~\S\ref{sec:examples} and~\S\ref{sec:sparsity}.
+
+\textbf{NYCLU stop-and-frisk dataset.} For our second problem, we use
+the NYCLU 2014 stop-and-frisk dataset~\citep{nyclu:2014} to predict
 whether a weapon will be found on a stopped individual who is frisked or searched.
 %
 From the original dataset of 45,787 records, each describing an incident involving
@@ -56,8 +61,7 @@ that we use in our experiments below, through~\S\ref{sec:sparsity}.
 %
 For our experiments in~\S\ref{sec:ablation}, we add negations of 18 of these antecedents,
 which gives a total of ${M=46}$ antecedents.
-\end{itemize}
-%
+
 For further details about data preprocessing steps and antecedent mining,
 see Appendix~\ref{appendix:data}.
 %
@@ -73,7 +77,54 @@ interventions are likely to discover criminal possession of a weapon.
 \subsection{Example optimal rule lists}
 \label{sec:examples}
 
-\begin{figure}[t]
+To motivate the feature set we used in our analysis of the ProPublica dataset,
+we first show example rule lists using slightly different feature set (Figure~\ref{fig:propublica}).
+%
+Here, the age categories ($<$25, 25-45, $>$45) come directly from the ProPublica dataset,
+and we include race categories (African American, Asian, Caucasian, Hispanic,
+Other\footnote{We grouped together the original Native American ($<$0.003) and Other ($>$0.05) categories.}).
+%
+For this feature set, our antecedent mining procedure generated an average
+of~197 antecedents, across folds.
+%
+Notice that none of these rule lists contain antecedents that directly depend on race;
+this motivated our choice to exclude race in our subsequent analysis.
+%
+Also, to explore the effect of a different discretization of the age category,
+in our subsequent analysis, we chose a set of age ranges that was fine-grained
+for younger individuals (18-20, 21-22, 23-25, 26-45, $>$45).
+
+\begin{figure}[t!]
+\begin{algorithmic}
+\State \bif $(priors > 3)$ \bthen $yes$
+\State \belif $(sex = male) \band (age < 25)$ \bthen $yes$
+\State \belse $no$
+\end{algorithmic}
+\vspace{1mm}
+\begin{algorithmic}
+\State \bif $(age < 25) \band (priors = 2-3)$ \bthen $yes$
+\State \belif $(age < 25) \band (juvenile~crimes > 0)$ \bthen $yes$
+\State \belif $(priors > 3)$ \bthen $yes$
+\State \belse $no$
+\end{algorithmic}
+\vspace{1mm}
+\begin{algorithmic}
+\State \bif $(juvenile~crimes = 0) \band (priors = 0)$ \bthen $no$
+\State \belif $(sex = male) \band (age < 25)$ \bthen $yes$
+\State \belif $(priors > 3)$ \bthen $yes$
+\State \belse $no$
+\end{algorithmic}
+\caption{Three representative optimal rule lists that predict two-year recidivism for the
+ProPublica dataset, found by CORELS, across 10 cross-validation folds.
+%
+The remaining seven optimal rule lists were the same or similar to the top or
+middle of these, with prefixes containing the same rules, up to a permutation,
+and the same default rules.
+}
+\label{fig:propublica}
+\end{figure}
+
+\begin{figure}[b!]
 \begin{algorithmic}
 \State \bif $(age = 23-25) \band (priors = 2-3)$ \bthen $yes$
 \State \belif $(age = 18-20)$ \bthen $yes$
@@ -132,39 +183,11 @@ folds; the others contain the same rules, up to a permutation.
 \label{fig:weapon-rule-list}
 \end{figure}
 
-\begin{figure}[t!]
-\begin{center}
-%\includegraphics[width=0.75\textwidth]{figs/sketch-comparison.png}
-% left lower right upper
-\includegraphics[trim={10mm, 5mm, 15mm, 5mm},
-width=\textwidth]{figs/compare-compas-weapon.pdf}
-\end{center}
-\caption{Comparison of CORELS and a panel of eight other algorithms:
-logistic regression~(GLM), support vector machines~(SVM),
-AdaBoost, CART, C4.5, random forests~(RF), RIPPER,
-scalable Bayesian rule lists~(SBRL).
-%
-Test accuracy means (white squares),
-standard deviations (error bars),
-and values (colors correspond to folds),
-for 10-fold cross-validation experiments.
-%
-Left:~Two-year recidivism prediction for the ProPublica COMPAS dataset.
-%
-For CORELS, we use regularization parameter~${\Reg=0.005}$.
-%
-Right:~Weapon prediction for the NYCLU stop-and-frisk dataset.
-%
-For CORELS, we use~${\Reg=0.01}$.
-%
-Note that we were unable to execute RIPPER for the NYCLU problem.
-}
-\label{fig:comparison}
-\end{figure}
-
 Figures~\ref{fig:recidivism-all-folds} and~\ref{fig:weapon-rule-list}
 show example optimal rule lists that CORELS learns
-for the ProPublica and NYCLU datasets, respectively, using 10-fold cross validation.
+for the ProPublica and NYCLU datasets, respectively,
+using 10-fold cross validation and the antecedent sets described
+at the beginning of~\S\ref{sec:experiments}.
 %
 While our goal is to provide illustrative examples, and not to provide a
 detailed analysis nor to advocate for the use of these specific models,
@@ -175,7 +198,7 @@ in Figure~\ref{fig:weapon-rule-list} has the spirit of the heuristic
 strategy presented by~\citet{Goel16} that combines three stop criteria
 and is based on a reduced version of their full regression model.
 %
-See Appendix~\ref{appendix:examples} for listings of optimal rule lists found
+See Appendix~\ref{appendix:examples} for additional listings of optimal rule lists found
 by CORELS, for each of our prediction problems, across cross-validation folds,
 for different values of the regularization parameter~$\Reg$.
 
@@ -209,6 +232,36 @@ In fact, the difference between folds was far larger than the difference
 between algorithms.
 We conclude that CORELS produces models whose accuracy is comparable
 to those found via other algorithms.
+
+\begin{figure}[t!]
+\begin{center}
+%\includegraphics[width=0.75\textwidth]{figs/sketch-comparison.png}
+% left lower right upper
+\includegraphics[trim={10mm, 5mm, 15mm, 5mm},
+width=\textwidth]{figs/compare-compas-weapon.pdf}
+\end{center}
+\caption{Comparison of CORELS and a panel of eight other algorithms:
+logistic regression~(GLM), support vector machines~(SVM),
+AdaBoost, CART, C4.5, random forests~(RF), RIPPER,
+scalable Bayesian rule lists~(SBRL).
+%
+Test accuracy means (white squares),
+standard deviations (error bars),
+and values (colors correspond to folds),
+for 10-fold cross-validation experiments.
+%
+Left:~Two-year recidivism prediction for the ProPublica COMPAS dataset.
+%
+For CORELS, we use regularization parameter~${\Reg=0.005}$.
+%
+Right:~Weapon prediction for the NYCLU stop-and-frisk dataset.
+%
+For CORELS, we use~${\Reg=0.01}$.
+%
+Note that we were unable to execute RIPPER for the NYCLU problem.
+}
+\label{fig:comparison}
+\end{figure}
 
 \begin{figure}[t!]
 \begin{center}
@@ -269,32 +322,20 @@ the scores generated by the black box COMPAS algorithm
 at predicting two-year recidivism for the ProPublica dataset.
 %
 Across the 10 cross-validation folds, the optimal rule lists learned by CORELS
-(${\Reg = 0.005}$), shown in Figure~\ref{fig:recidivism-all-folds},
-have mean test accuracy~0.676, with standard deviation~0.020.
+(${\Reg = 0.005}$, Figure~\ref{fig:recidivism-all-folds}),
+have mean test accuracy~0.68, with standard deviation~0.02.
 %
-The COMPAS algorithm outputs integer scores between~1 and~10,
+For comparison, the optimal rule lists in Figure~\ref{fig:propublica}
+achieve a similar mean test accuracy of~0.66, with standard deviation~0.02.
+
+The COMPAS algorithm outputs scores between~1 and~10,
 representing low (1-4), medium (5-7), and high (8-10) risk for recidivism.
 %
 As in the analysis by~\citep{LarsonMaKiAn16}, we interpret a medium or high score
 as a positive prediction for two-year recidivism, and a low score as a negative prediction.
 %
-Across the 10 folds, the COMPAS algorithm scores have a slightly lower
-mean test accuracy of~0.654, with standard deviation~0.015.
-
-We also considered a variant of our CORELS procedure for a different
-feature set:  we used the coarser age categories from the ProPublica dataset
-($<$25, 25-45, $>$45) and included race (African American, Asian, Caucasian, Hispanic,
-Other\footnote{We grouped together the original Native American ($<$0.003) and Other ($>$0.05) categories.});
-our antecedent mining procedure generated 197 antecedents, on average.
-%
-In this context, CORELS achieves the similar mean test accuracy of~0.659, with standard deviation~0.015.
-%
-We note two distinguishing features of the optimal rule lists found by CORELS.
-%
-First, none of these rule lists contain antecedents that directly depend on race.
-%
-Second, the rule lists are even simpler than those in Figure~\ref{fig:recidivism-all-folds};
-these prefixes all have length two or three instead of four.
+Across the 10 folds, the COMPAS algorithm scores obtain
+mean test accuracy of~0.66, with standard deviation~0.02.
 
 \subsection{CORELS execution traces, for different regularization parameters}
 \label{sec:reg-param}
@@ -416,7 +457,7 @@ from the panels to the left, for the three different values of~$\Reg$.
 \begin{figure}[t!]
 \begin{center}
 % left lower right upper
-\includegraphics[trim={30mm 0mm 30mm 5mm},
+\includegraphics[trim={30mm 0mm 30mm 3mm},
 width=0.9\textwidth]{figs/weapon_reg-queue.pdf}
 \end{center}
 \vspace{-5mm}
