Clarify ablation experiment, pass over most of sec 6, formatting

--- a/paper/sections/implementation-long.tex
+++ b/paper/sections/implementation-long.tex
@@ -1,5 +1,6 @@
 \input{sections/incremental}
 
+\clearpage
 \section{Implementation}
 \label{sec:implementation}
 
@@ -26,10 +27,8 @@ We additionally describe how we garbage collect our data structures~(\S\ref{sec:
 %
 Finally, we explore how our queue can be used to support
 custom scheduling policies designed to improve performance~(\S\ref{sec:scheduling}).
-%
-Our implementation of CORELS can be found~at: \\
 
-\centerline{\url{https://github.com/nlarusstone/corels}.}
+Our implementation of CORELS is at: \url{https://github.com/nlarusstone/corels}.
 
 \subsection{Prefix tree}
 \label{sec:trie}
