Fix figure trim

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -440,8 +440,8 @@ See also Figures~\ref{fig:weapon-reg-execution} and~\ref{fig:queue-weapon-reg}.
 \begin{figure}[t!]
 \begin{center}
 % left lower right upper
-\includegraphics[trim={35mm 0mm 35mm 20mm},
-width=\textwidth]{figs/weapon_reg-execution.pdf}
+\includegraphics[trim={35mm 0mm 35mm 15mm},
+width=0.97\textwidth]{figs/weapon_reg-execution.pdf}
 \end{center}
 \vspace{-5mm}
 \caption{Example executions of CORELS, for the NYCLU stop-and-frisk dataset (${M = 28}$).
