Fix ablation table for COMPAS to match description in caption
* Mean and standard deviation of incomplete execution times
* Corresponding mean slowdown
* Use incomplete times as lower bound on time to opt for executions
that didn't find the optimum

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -522,7 +522,8 @@ No priority queue (BFS) & 5.3 (1.6) & 1.1$\times$ & 29 (13) & 5-6 \\
 No support bounds & 8.8 (3.0) & 1.8$\times$ & 11 (3) & 5-6 \\
 No lookahead bound & 65 (21) & 13$\times$ & 8 (2) & 6-7 \\
 No symmetry-aware map & 59 (23) & 11$\times$ & 22 (6) & 5-6 \\
-No equivalent points bound & $>$87 & $>$12$\times$ & $>$3400~* & $\ge$10 \\
+%No equivalent points bound & $>$87 & $>$12$\times$ & $>$3400~* & $\ge$10 \\
+No equivalent points bound & 93 (9) & $>$22$\times$ & $>$4600~* & $\ge$10 \\
 \hline
 \end{tabular}
 \begin{tabular}{l | c | c | c}
@@ -564,7 +565,8 @@ We also report the  mean slowdown in total execution time,
 with respect to CORELS.
 %
 In the final row, we report the mean (and standard deviation) of the
-incomplete execution time and corresponding slowdown;
+incomplete execution time and corresponding slowdown,
+and a lower bound on the mean time to optimum;
 in the remaining fields, we report minimum values across folds.
 %
 See also Figure~\ref{fig:queue}. \\
