Missing inequality in table

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -523,7 +523,7 @@ No support bounds & 8.8 (3.0) & 1.8$\times$ & 11 (3) & 5-6 \\
 No lookahead bound & 65 (21) & 13$\times$ & 8 (2) & 6-7 \\
 No symmetry-aware map & 59 (23) & 11$\times$ & 22 (6) & 5-6 \\
 %No equivalent points bound & $>$87 & $>$12$\times$ & $>$3400~* & $\ge$10 \\
-No equivalent points bound & 93 (9) & $>$22$\times$ & $>$4600~* & $\ge$10 \\
+No equivalent points bound & $>$93 (9) & $>$22$\times$ & $>$4600~* & $\ge$10 \\
 \hline
 \end{tabular}
 \begin{tabular}{l | c | c | c}
