Update fig caption for sparsity fig (SBRL params in legend)

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -287,9 +287,9 @@ width=0.93\textwidth]{figs/frisk-sparsity-training-c45.pdf}
 \end{center}
 \caption{Training and test accuracy as a function of model size.
 %
-For CORELS, CART, and C4.5, we vary the regularization parameter~$\Reg$,
-and complexity parameters~$cp$ and~$C$, respectively;
-numbers within parentheses in the legend indicate parameter values.
+In the legend, numbers in parentheses are algorithm parameters that we vary
+for CORELS~($\Reg$), CART~($cp$), C4.5~($C$), and SBRL ($\eta$, $\lambda$, $i$),
+where~$i$ is the number of iterations.
 %
 Note that the CART implementation sets ${cp = 0.01}$ by default,
 and C4.5 uses ${C = 0.25}$.
