Updated figures (all) for JMLR paper

--- a/viz/Logs.ipynb
+++ b/viz/Logs.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -80,224 +80,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>total_time</th>\n",
-       "      <th>evaluate_children_time</th>\n",
-       "      <th>node_select_time</th>\n",
-       "      <th>rule_evaluation_time</th>\n",
-       "      <th>lower_bound_time</th>\n",
-       "      <th>lower_bound_num</th>\n",
-       "      <th>objective_time</th>\n",
-       "      <th>tree_insertion_time</th>\n",
-       "      <th>tree_insertion_num</th>\n",
-       "      <th>queue_insetion_time</th>\n",
-       "      <th>...</th>\n",
-       "      <th>tree_num_evaluated</th>\n",
-       "      <th>tree_memory</th>\n",
-       "      <th>queue_size</th>\n",
-       "      <th>queue_min_length</th>\n",
-       "      <th>queue_memory</th>\n",
-       "      <th>pmap_size</th>\n",
-       "      <th>pmap_null_num</th>\n",
-       "      <th>pmap_discard_num</th>\n",
-       "      <th>log_remaining_space_size</th>\n",
-       "      <th>prefix_lengths</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.000822</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>159</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.000910</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>159</td>\n",
-       "      <td>0:1;</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.001880</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000003</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000007</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0.000024</td>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0.000003</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>738</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>64</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>159</td>\n",
-       "      <td>0:1;1:5;</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.001947</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000003</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000008</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0.000032</td>\n",
-       "      <td>0.000003</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0.000004</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1030</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>64</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>159</td>\n",
-       "      <td>0:1;1:7;</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.001997</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000003</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000008</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0.000042</td>\n",
-       "      <td>0.000003</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0.000005</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1176</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>64</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>159</td>\n",
-       "      <td>0:1;1:8;</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 27 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   total_time  evaluate_children_time  node_select_time  rule_evaluation_time  \\\n",
-       "0    0.000822                     0.0          0.000000                   0.0   \n",
-       "1    0.000910                     0.0          0.000000                   0.0   \n",
-       "2    0.001880                     0.0          0.000003                   0.0   \n",
-       "3    0.001947                     0.0          0.000003                   0.0   \n",
-       "4    0.001997                     0.0          0.000003                   0.0   \n",
-       "\n",
-       "   lower_bound_time  lower_bound_num  objective_time  tree_insertion_time  \\\n",
-       "0          0.000000                0        0.000000             0.000000   \n",
-       "1          0.000000                0        0.000000             0.000000   \n",
-       "2          0.000007                6        0.000024             0.000002   \n",
-       "3          0.000008                8        0.000032             0.000003   \n",
-       "4          0.000008               10        0.000042             0.000003   \n",
-       "\n",
-       "   tree_insertion_num  queue_insetion_time       ...        \\\n",
-       "0                   0             0.000000       ...         \n",
-       "1                   1             0.000000       ...         \n",
-       "2                   6             0.000003       ...         \n",
-       "3                   8             0.000004       ...         \n",
-       "4                   9             0.000005       ...         \n",
-       "\n",
-       "   tree_num_evaluated  tree_memory  queue_size  queue_min_length  \\\n",
-       "0                   0            0           0                 0   \n",
-       "1                   0            8           1                 0   \n",
-       "2                   0          738           5                 0   \n",
-       "3                   0         1030           7                 0   \n",
-       "4                   0         1176           8                 0   \n",
-       "\n",
-       "   queue_memory  pmap_size  pmap_null_num  pmap_discard_num  \\\n",
-       "0             0          0              0                 0   \n",
-       "1             8          0              0                 0   \n",
-       "2            64          5              0                 0   \n",
-       "3            64          7              0                 0   \n",
-       "4            64          8              0                 0   \n",
-       "\n",
-       "   log_remaining_space_size  prefix_lengths  \n",
-       "0                       159                  \n",
-       "1                       159            0:1;  \n",
-       "2                       159        0:1;1:5;  \n",
-       "3                       159        0:1;1:7;  \n",
-       "4                       159        0:1;1:8;  \n",
-       "\n",
-       "[5 rows x 27 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27606692.5556\n",
+      "62.1432444444\n",
+      "2.25102099136e-06\n"
+     ]
     }
    ],
    "source": [
-    "cap = '../logs/for-compas_1_train.out-curious_lb-with_captured_symmetry_map-minor-removed=none-max_num_nodes=100000000-c=0.0050000-v=1-f=1000.txt'\n",
-    "cap_df = pd.read_csv(cap)\n",
-    "cap_df.fillna('', inplace=True)\n",
-    "cap_df.head()"
+    "lbs = []\n",
+    "times = []\n",
+    "for i in range(9):\n",
+    "    cap = '../jmlr/for-compas_{0}_train.out-curious_lb-with_prefix_perm_map-minor-removed=none-max_num_nodes=1000000000-c=0.0050000-v=10-f=1000.txt'.format(i)\n",
+    "    cap_df = pd.read_csv(cap)\n",
+    "    cap_df.fillna('', inplace=True)\n",
+    "    lbs.append(cap_df.tail(1)['lower_bound_num'].iloc[0])\n",
+    "    times.append(cap_df.tail(1)['total_time'].iloc[0])\n",
+    "print np.mean(lbs)\n",
+    "print np.mean(times)\n",
+    "print np.mean(times) / np.mean(lbs)"
    ]
   },
   {
