Decrease font size in Fig 2 to eliminate line break in rule list

--- a/paper/sections/framework.tex
+++ b/paper/sections/framework.tex
@@ -72,6 +72,7 @@ whose antecedent~$p_0$ simply asserts true.
 
 \begin{arxiv}
 \begin{figure}[t!]
+\small
 \begin{subfigure}{0.67\textwidth}
 \begin{algorithmic}
 \State \bif $(age=18-20) \band (sex=male)$ \bthen $yes$
