Tweak and unsquish Fig 11

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -611,8 +611,7 @@ See also Figure~\ref{fig:queue}. \\
 \begin{figure}[t!]
 \begin{center}
 % left lower right upper
-%[trim={0mm 10mm 0mm 20mm}, width=0.94\textwidth]
-\includegraphics[width=0.94\textwidth]{figs/kdd_compas_ablation-queue.pdf}
+\includegraphics[trim={0mm 0mm 0mm 5mm}, width=0.74\textwidth]{figs/jmlr_compas_ablation-queue.pdf}
 \end{center}
 \vspace{-5mm}
 \caption{Summary of the logical queue's contents, for full CORELS (top left)
