Tweak and unsquish Fig 12

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -741,7 +741,8 @@ and also Figure~\ref{fig:queue-weapon}.
 \begin{center}
 % left lower right upper
 %trim={0mm 10mm 0mm 20mm},
-\includegraphics[width=0.94\textwidth]{figs/weapon_ablation-queue.pdf}
+%\includegraphics[width=0.94\textwidth]{figs/weapon_ablation-queue.pdf}
+\includegraphics[trim={0mm 0mm 0mm 5mm}, width=0.74\textwidth]{figs/weapon_ablation-queue.pdf}
 \end{center}
 \vspace{-5mm}
 \caption{Summary of the logical queue's contents, for full CORELS (top left)
